auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53309acf",
+   "id": "7a1de55a",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ac7e48",
+   "id": "f47eda87",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e6b976",
+   "id": "06036189",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0fe305f",
+   "id": "8f2722d1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33eefde1",
+   "id": "8bd59f86",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b5c521c",
+   "id": "f7630514",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fab91a6",
+   "id": "1c1b8a16",
    "metadata": {
     "hide-output": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f530c6",
+   "id": "8055b860",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f761475",
+   "id": "be8cbcfd",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43d863f4",
+   "id": "326ab40f",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "658b2fb0",
+   "id": "91831499",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54bdc6a7",
+   "id": "da65ff4b",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a94afe13",
+   "id": "b48a13f1",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f1f646",
+   "id": "8d029bd8",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "041737d5",
+   "id": "90e74f07",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2dbff78",
+   "id": "e2557ae0",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19fb033a",
+   "id": "566bc08f",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e8cc28",
+   "id": "f544d4d5",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10a2a61c",
+   "id": "91dd9dba",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f341bc4e",
+   "id": "eb4cd01e",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525b84d4",
+   "id": "6f3c788b",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df559a8c",
+   "id": "fa4435f4",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdef42bf",
+   "id": "1904d92e",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcdaf9d0",
+   "id": "24282591",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d334018",
+   "id": "0e222a0f",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26615a24",
+   "id": "79e3c84c",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cb11ed1",
+   "id": "aad96310",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff05911b",
+   "id": "0a36d689",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81e403dd",
+   "id": "7975e913",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the arrays declared as static (compile-time constants) in order to help the compiler."
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6cc9b7",
+   "id": "ef399de0",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88f47f2",
+   "id": "8dd2e7eb",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa7ae56",
+   "id": "e47f020b",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752cbb07",
+   "id": "32d85b49",
    "metadata": {},
    "source": [
     "We can now write a function that will use the `Arellano_Economy` class and the\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdee141e",
+   "id": "30e93da0",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c41f7b94",
+   "id": "85b1ddda",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03418a11",
+   "id": "72d06f9c",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c4d4e1f",
+   "id": "f20c50cb",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cec457a",
+   "id": "5c053b82",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b15cff0b",
+   "id": "84dfccf5",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9a6391a",
+   "id": "181a3e0e",
    "metadata": {
     "hide-output": false
    },
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "433d63fd",
+   "id": "fc315ace",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffaeb0a4",
+   "id": "1056cd5d",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9541f32a",
+   "id": "5376a4ef",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a023c6",
+   "id": "3661e18d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13141799",
+   "id": "9a85c213",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d17d136",
+   "id": "38ac059f",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of Arellano (2008)"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "269e53c7",
+   "id": "5b8ba4bf",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "995e7a9e",
+   "id": "2c23c65b",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72d6a51e",
+   "id": "788d83ff",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58b1b3e",
+   "id": "0629a8d4",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4213f7a4",
+   "id": "40dbbda9",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b0570ca",
+   "id": "eb1201bd",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06968dae",
+   "id": "8a1d8232",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "244f34c6",
+   "id": "572996eb",
    "metadata": {
     "hide-output": false
    },
@@ -1240,7 +1240,7 @@
   }
  ],
  "metadata": {
-  "date": 1694646184.326809,
+  "date": 1695019732.1210287,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
