--- a/cake_eating_numerical.ipynb
+++ b/cake_eating_numerical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5be6edf1",
+   "id": "5b6e31c8",
    "metadata": {},
    "source": [
     "# Cake Eating: Numerical Methods"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c77f99",
+   "id": "ffcef585",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28101fef",
+   "id": "e40cb7d9",
    "metadata": {
     "hide-output": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ee25daa",
+   "id": "2b0f61c2",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "800ad969",
+   "id": "1a1b0448",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea38d54",
+   "id": "009f4824",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "970eb67f",
+   "id": "015dc8a1",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "076c817d",
+   "id": "bb1e43bc",
    "metadata": {},
    "source": [
     "## Reviewing the Model\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd0e969",
+   "id": "2230986f",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a240923b",
+   "id": "81983f5f",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da88940",
+   "id": "bfa2a2ef",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the Cake Eating Problem."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "837e4940",
+   "id": "f05a3ded",
    "metadata": {
     "hide-output": false
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6745a21d",
+   "id": "b46946ec",
    "metadata": {
     "hide-output": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8902a57b",
+   "id": "9c4d7095",
    "metadata": {},
    "source": [
     "Now let’s define the CRRA utility function."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d149c04",
+   "id": "bd1c4d6f",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e88cd4d",
+   "id": "ae01c119",
    "metadata": {},
    "source": [
     "### The Bellman Operator\n",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "838afb62",
+   "id": "7c569708",
    "metadata": {
     "hide-output": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d684002f",
+   "id": "43bd0e79",
    "metadata": {},
    "source": [
     "In order to create a vectorized function using `state_action_value`, we use [jax.vmap](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html).\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79d8d783",
+   "id": "0837e433",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbecfd90",
+   "id": "39b4b11b",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ada9d3",
+   "id": "77a2939a",
    "metadata": {},
    "source": [
     "Let’s start by creating a Cake Eating Model instance using the default parameterization."
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1d17fa0",
+   "id": "ac8bca1e",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04cc650b",
+   "id": "f87b0d75",
    "metadata": {},
    "source": [
     "Now let’s see the iteration of the value function in action.\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b3d29f0",
+   "id": "42e6cde9",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e5ff04a",
+   "id": "54646966",
    "metadata": {},
    "source": [
     "Let’s introduce a wrapper function called `compute_value_function`\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a9966f",
+   "id": "1ef9d8cd",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5da2c2dc",
+   "id": "7204e0da",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28c90a9b",
+   "id": "e914f0da",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49537525",
+   "id": "d3d31aa6",
    "metadata": {},
    "source": [
     "Next let’s compare it to the analytical solution."
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5330596",
+   "id": "6b18eff3",
    "metadata": {
     "hide-output": false
    },
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de57769e",
+   "id": "501fe45a",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4ee69f9",
+   "id": "c885642a",
    "metadata": {},
    "source": [
     "### Policy Function\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18581c3d",
+   "id": "f6dd26b1",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59736c8c",
+   "id": "cd7558ed",
    "metadata": {},
    "source": [
     "Now let’s pass the approximate value function and compute optimal consumption:"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e2f5b7c",
+   "id": "bc479b14",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b94631",
+   "id": "41c48112",
    "metadata": {},
    "source": [
     "Let’s plot this next to the true analytical solution"
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ea1402b",
+   "id": "dcb0dfbf",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7ce1a78",
+   "id": "f41b9454",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e274c3a2",
+   "id": "f8673090",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5ad584c",
+   "id": "2ddb898d",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67380a85",
+   "id": "2a2754a1",
    "metadata": {
     "hide-output": false
    },
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c591c852",
+   "id": "cbf67522",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38cb5dba",
+   "id": "ed35d441",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f401c7",
+   "id": "d1409b55",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12bd491d",
+   "id": "07cc1d4c",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118b416c",
+   "id": "b96bf0c9",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d25044",
+   "id": "f1572625",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b70f1fd",
+   "id": "a5d1e80e",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   }
  ],
  "metadata": {
-  "date": 1694646184.3637292,
+  "date": 1695019732.15914,
   "filename": "cake_eating_numerical.md",
   "kernelspec": {
    "display_name": "Python",
