--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e25d3f67",
+   "id": "2cd6ad91",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4441de68",
+   "id": "6bb631ea",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3599e529",
+   "id": "78b0ab4d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32489003",
+   "id": "8696365b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183d4181",
+   "id": "0f9833d3",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27996899",
+   "id": "c9f52468",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb73b87",
+   "id": "49580d0e",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1b1781a",
+   "id": "1bea4767",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e881b0f8",
+   "id": "e1aaee29",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64dc4793",
+   "id": "f053c197",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05f84f16",
+   "id": "d1fdd359",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f7d56a5",
+   "id": "f581d291",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f145c40",
+   "id": "d0b18dbf",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a827a4",
+   "id": "d3fd7908",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb911a3f",
+   "id": "684584e2",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97368c06",
+   "id": "6be11818",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c17102e4",
+   "id": "52d3ecfc",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39dfd331",
+   "id": "7311e551",
    "metadata": {
     "hide-output": false
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116eaa01",
+   "id": "b4bcde9c",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "636fa606",
+   "id": "ff2ec299",
    "metadata": {
     "hide-output": false
    },
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7e3bb8d",
+   "id": "7f5d0b42",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eac05b15",
+   "id": "ab0a3da4",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "581a5fea",
+   "id": "f9606427",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08b48d82",
+   "id": "26241fa7",
    "metadata": {
     "hide-output": false
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73cba9f",
+   "id": "9075ddad",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb9c896c",
+   "id": "3da9f1e0",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ab1421d",
+   "id": "82d9c973",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f4fbe2a",
+   "id": "3c18d2a4",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "797c099e",
+   "id": "563cca89",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "438baf9b",
+   "id": "07f3e987",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40046a88",
+   "id": "3549f326",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e45206e",
+   "id": "c57508c6",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c94cad84",
+   "id": "33f7e677",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0e1ff4",
+   "id": "445fb577",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63fbc887",
+   "id": "d08816b2",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b1b00f8",
+   "id": "709a2602",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb2a673a",
+   "id": "b6a65268",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562ef54d",
+   "id": "a784cfd4",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33de8474",
+   "id": "1b921cf5",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb64999",
+   "id": "aeb7d49b",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(8.1)](#equation-lambda-mle)"
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3aa9c4d",
+   "id": "dcc93335",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f5ea9b8",
+   "id": "8927e1bf",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a019b73b",
+   "id": "6c205768",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39b5f316",
+   "id": "3da3b963",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e01909cd",
+   "id": "a5a5a062",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70f8660",
+   "id": "1c27ff7c",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -722,7 +722,7 @@
   }
  ],
  "metadata": {
-  "date": 1694646184.8072762,
+  "date": 1695019732.680407,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
