--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14648130",
+   "id": "c55ab04f",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b5eee6",
+   "id": "f42f95d4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,18 +24,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb0f5cb1",
+   "id": "3d104e40",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
-    "In this lecture we highlight some of the capabilities of JAX, including JIT\n",
-    "compilation and automatic differentiation.\n",
+    "One of the key features of JAX is automatic differentiation.\n",
     "\n",
-    "The application is computing equilibria via Newton’s method, which we discussed\n",
-    "in [a more elementary QuantEcon lecture](https://python.quantecon.org/newton_method.html)\n",
+    "While other software packages also offer this feature, the JAX version is\n",
+    "particularly powerful because it integrates so closely with other core\n",
+    "components of JAX, such as accelerated linear algebra, JIT compilation and\n",
+    "parallelization.\n",
     "\n",
-    "Here our focus is on how to apply JAX to this problem.\n",
+    "The application of automatic differentiation we consider is computing economic equilibria via Newton’s method.\n",
+    "\n",
+    "Newton’s method is a relatively simple root and fixed point solution algorithm, which we discussed\n",
+    "in [a more elementary QuantEcon lecture](https://python.quantecon.org/newton_method.html).\n",
+    "\n",
+    "JAX is almost ideally suited to implementing Newton’s method efficiently, even\n",
+    "in high dimensions.\n",
     "\n",
     "We use the following imports in this lecture"
    ]
@@ -43,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba802db2",
+   "id": "2aa8bd8f",
    "metadata": {
     "hide-output": false
    },
@@ -51,12 +58,13 @@
    "source": [
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from scipy.optimize import root"
+    "from scipy.optimize import root\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ea3e9081",
+   "id": "3a240483",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a04421da",
+   "id": "67e3f5d6",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50f2fdb0",
+   "id": "1154c6ad",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -84,19 +92,24 @@
     "As a warm up, let’s implement Newton’s method in JAX for a simple\n",
     "one-dimensional root-finding problem.\n",
     "\n",
+    "Let $ f $ be a function from $ \\mathbb R $ to itself.\n",
+    "\n",
+    "A **root** of $ f $ is an $ x \\in \\mathbb R $ such that $ f(x)=0 $.\n",
+    "\n",
     "[Recall](https://python.quantecon.org/newton_method.html) that Newton’s method for solving for the root of $ f $ involves iterating with the map $ q $ defined by\n",
     "\n",
     "$$\n",
     "q(x) = x - \\frac{f(x)}{f'(x)}\n",
     "$$\n",
     "\n",
-    "Here is a function called `newton` that takes a function $ f $ plus a guess $ x_0 $, iterates with $ q $ starting from $ x0 $, and returns an approximate fixed point."
+    "Here is a function called `newton` that takes a function $ f $ plus a scalar value $ x_0 $,\n",
+    "iterates with $ q $ starting from $ x_0 $, and returns an approximate fixed point."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e60685c",
+   "id": "db043fcf",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ab863c",
+   "id": "ef5265d8",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -130,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "893bfb7c",
+   "id": "8b368f8a",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +152,6 @@
     "f = lambda x: jnp.sin(4 * (x - 1/4)) + x + x**20 - 1\n",
     "x = jnp.linspace(0, 1, 100)\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(x, f(x), label='$f(x)$')\n",
     "ax.axhline(ls='--', c='k')\n",
@@ -151,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af6d58a",
+   "id": "77d2cef9",
    "metadata": {},
    "source": [
     "Here we go"
@@ -160,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec2c8900",
+   "id": "eadf8006",
    "metadata": {
     "hide-output": false
    },
@@ -171,15 +183,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6a1d034",
+   "id": "8685a4ca",
    "metadata": {},
    "source": [
-    "This number looks good, given the figure."
+    "This number looks to be close to the root, given the figure."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd4e947a",
+   "id": "53b36f45",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -188,103 +200,50 @@
     "\n",
     "First we describe a market equilibrium problem we will solve with JAX via root-finding.\n",
     "\n",
-    "We begin with a two good case,\n",
-    "which is borrowed from [an earlier lecture](https://python.quantecon.org/newton_method.html).\n",
+    "The market is for $ n $ goods.\n",
     "\n",
-    "Then we shift to higher dimensions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e12e5c3f",
-   "metadata": {},
-   "source": [
-    "### The Two Goods Market Equilibrium\n",
+    "(We are extending a two-good version of the market from [an earlier lecture](https://python.quantecon.org/newton_method.html).)\n",
     "\n",
-    "Assume we have a market for two complementary goods where demand depends on the\n",
-    "price of both components.\n",
-    "\n",
-    "We label them good 0 and good 1, with price vector $ p = (p_0, p_1) $.\n",
-    "\n",
-    "Then the supply of good $ i $ at price $ p $ is,\n",
+    "The supply function for the $ i $-th good is\n",
     "\n",
     "$$\n",
     "q^s_i (p) = b_i \\sqrt{p_i}\n",
     "$$\n",
     "\n",
-    "and the demand of good $ i $ at price $ p $ is,\n",
-    "\n",
-    "$$\n",
-    "q^d_i (p) = \\text{exp}(-(a_{i0} p_0 + a_{i1} p_1)) + c_i\n",
-    "$$\n",
-    "\n",
-    "Here $ a_{ij} $, $ b_i $ and $ c_i $ are parameters for $ n \\times n $ square matrix $ A $ and $ n \\times 1 $ parameter vectors $ b $ and $ c $.\n",
-    "\n",
-    "The excess demand function is,\n",
-    "\n",
-    "$$\n",
-    "e_i(p) = q_i^d(p) - q_i^s(p), \\quad i = 0, 1\n",
-    "$$\n",
-    "\n",
-    "An equilibrium price vector $ p^* $ satisfies $ e_i(p^*) = 0 $.\n",
-    "\n",
-    "We set\n",
-    "\n",
-    "$$\n",
-    "A = \\begin{pmatrix}\n",
-    "            a_{00} & a_{01} \\\\\n",
-    "            a_{10} & a_{11}\n",
-    "        \\end{pmatrix},\n",
-    "            \\qquad\n",
-    "    b = \\begin{pmatrix}\n",
-    "            b_0 \\\\\n",
-    "            b_1\n",
-    "        \\end{pmatrix}\n",
-    "    \\qquad \\text{and} \\qquad\n",
-    "    c = \\begin{pmatrix}\n",
-    "            c_0 \\\\\n",
-    "            c_1\n",
-    "        \\end{pmatrix}\n",
-    "$$\n",
-    "\n",
-    "for this particular question."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae00a4ae",
-   "metadata": {},
-   "source": [
-    "### A High-Dimensional Version\n",
-    "\n",
-    "Let’s now shift to a linear algebra formulation, which allows us to handle\n",
-    "arbitrarily many goods.\n",
-    "\n",
-    "The supply function remains unchanged,\n",
+    "which we write in vector form as\n",
     "\n",
     "$$\n",
     "q^s (p) =b \\sqrt{p}\n",
     "$$\n",
     "\n",
-    "The demand function becomes\n",
+    "(Here $ \\sqrt{p} $ is the square root of each $ p_i $ and $ b \\sqrt{p} $ is the vector\n",
+    "formed by taking the pointwise product $ b_i \\sqrt{p_i} $ at each $ i $.)\n",
+    "\n",
+    "The demand function is\n",
     "\n",
     "$$\n",
-    "q^d (p) = \\text{exp}(- A \\cdot p) + c\n",
+    "q^d (p) = \\exp(- A p) + c\n",
     "$$\n",
     "\n",
-    "Our new excess demand function is\n",
+    "(Here $ A $ is an $ n \\times n $ matrix containing parameters, $ c $ is an $ n \\times\n",
+    "1 $ vector and the $ \\exp $ function acts pointwise (element-by-element) on the\n",
+    "vector $ - A p $.)\n",
+    "\n",
+    "The excess demand function is\n",
     "\n",
     "$$\n",
-    "e(p) = \\text{exp}(- A \\cdot p) + c - b \\sqrt{p}\n",
+    "e(p) = \\exp(- A p) + c - b \\sqrt{p}\n",
     "$$\n",
     "\n",
-    "The function below calculates the excess demand for the given parameters"
+    "An **equilibrium price** vector is an $ n $-vector $ p $ such that $ e(p) = 0 $.\n",
+    "\n",
+    "The function below calculates the excess demand for given parameters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a737772",
+   "id": "c7b0ecfc",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af8a752",
+   "id": "f11de825",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -306,14 +265,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918e0504",
+   "id": "f2b8c992",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
     "\n",
     "We use a multivariate version of Newton’s method to compute the equilibrium price.\n",
     "\n",
-    "The rule for updating a guess $ p_n $ of the price vector is\n",
+    "The rule for updating a guess $ p_n $ of the equilibrium price vector is\n",
     "\n",
     "\n",
     "<a id='equation-multi-newton'></a>\n",
@@ -325,22 +284,29 @@
     "\n",
     "Iteration starts from initial guess $ p_0 $.\n",
     "\n",
-    "Instead of coding the Jacobian by hand, we use `jax.jacobian()`."
+    "Instead of coding the Jacobian by hand, we use automatic differentiation via `jax.jacobian()`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4360b4ce",
+   "id": "2f557f69",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "def newton(f, x_0, tol=1e-5, max_iter=15):\n",
+    "    \"\"\"\n",
+    "    A multivariate Newton root-finding routine.\n",
+    "\n",
+    "    \"\"\"\n",
     "    x = x_0\n",
     "    f_jac = jax.jacobian(f)\n",
-    "    q = jax.jit(lambda x: x - jnp.linalg.solve(f_jac(x), f(x)))\n",
+    "    @jax.jit\n",
+    "    def q(x):\n",
+    "        \" Updates the current guess. \"\n",
+    "        return x - jnp.linalg.solve(f_jac(x), f(x))\n",
     "    error = tol + 1\n",
     "    n = 0\n",
     "    while error > tol:\n",
@@ -359,20 +325,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7eababb",
+   "id": "58a8eeef",
    "metadata": {},
    "source": [
     "### Application\n",
     "\n",
     "Let’s now apply the method just described to investigate a large market with 5,000 goods.\n",
     "\n",
-    "We randomly generate the matrix $ A $ and set the parameter vectors $ b \\text{ and } c $ to $ 1 $."
+    "We randomly generate the matrix $ A $ and set the parameter vectors $ b, c $ to $ 1 $."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d3abd3",
+   "id": "eaba1122",
    "metadata": {
     "hide-output": false
    },
@@ -383,9 +349,7 @@
     "\n",
     "# Create a random matrix A and normalize the rows to sum to one\n",
     "key = jax.random.PRNGKey(seed)\n",
-    "\n",
     "A = jax.random.uniform(key, [dim, dim])\n",
-    "\n",
     "s = jnp.sum(A, axis=0)\n",
     "A = A / s\n",
     "\n",
@@ -396,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf816565",
+   "id": "6bc548db",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -405,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a1e3c84",
+   "id": "c984feab",
    "metadata": {
     "hide-output": false
    },
@@ -416,18 +380,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f013d265",
+   "id": "d951149c",
    "metadata": {},
    "source": [
-    "By leveraging the power of Newton’s method, JAX accelerated linear algebra,\n",
+    "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
     "automatic differentiation, and a GPU, we obtain a relatively small error for\n",
-    "this very large problem in just a few seconds:"
+    "this high-dimensional problem in just a few seconds:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8bb6f5b",
+   "id": "b704c817",
    "metadata": {
     "hide-output": false
    },
@@ -439,9 +403,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b790682",
+   "metadata": {},
+   "source": [
+    "Here’s the size of the error:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3160fdd9",
+   "id": "a94bb4b6",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2186a272",
+   "id": "7b917334",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -462,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d979a5b",
+   "id": "e633eb93",
    "metadata": {
     "hide-output": false
    },
@@ -478,9 +450,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fdc3660",
+   "metadata": {},
+   "source": [
+    "The result is also slightly less accurate:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "052bb6c7",
+   "id": "2af71477",
    "metadata": {
     "hide-output": false
    },
@@ -492,15 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d77d07",
-   "metadata": {},
-   "source": [
-    "The result is also less accurate."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7de8c869",
+   "id": "5a77d017",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -508,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7dd1ead",
+   "id": "be055b41",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -568,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1494a3f4",
+   "id": "8c4b9ba6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -579,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f08d6b23",
+   "id": "8304d4af",
    "metadata": {
     "hide-output": false
    },
@@ -598,16 +570,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d7500b1",
+   "id": "b76411d6",
    "metadata": {},
    "source": [
-    "Then define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
+    "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d794f0bd",
+   "id": "c00c32b2",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b34aab",
+   "id": "de25384a",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -628,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3908bc2",
+   "id": "72167ada",
    "metadata": {
     "hide-output": false
    },
@@ -645,20 +617,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "845a1db6",
+   "id": "7cec87ac",
    "metadata": {},
    "source": [
-    "We find that the results are invariant to the starting values given the well-defined property of this question.\n",
+    "We find that the results are invariant to the starting values.\n",
     "\n",
     "But the number of iterations it takes to converge is dependent on the starting values.\n",
     "\n",
-    "Let substitute the output back to the formulate to check our last result"
+    "Let substitute the output back into the formulate to check our last result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b674e176",
+   "id": "83779e2f",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0615866",
+   "id": "21a1a919",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -680,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56abbdfa",
+   "id": "c9face00",
    "metadata": {
     "hide-output": false
    },
@@ -699,10 +671,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "872c0759",
+   "id": "4261860e",
    "metadata": {},
    "source": [
-    "The result is very close to the ground truth but still slightly different.\n",
+    "The result is very close to the true solution but still slightly different.\n",
     "\n",
     "We can increase the precision of the floating point numbers and restrict the tolerance to obtain a more accurate approximation (see detailed discussion in the [lecture on JAX](https://python-programming.quantecon.org/jax_intro.html#differences))"
    ]
@@ -710,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b756b95f",
+   "id": "e0bedae5",
    "metadata": {
     "hide-output": false
    },
@@ -727,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2116d42d",
+   "id": "0366d2d9",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -735,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea80138",
+   "id": "312ec6b2",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -781,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1536a9f3",
+   "id": "841961ff",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -792,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e52b7b82",
+   "id": "4875e90d",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7425695c",
+   "id": "101bf5a2",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -820,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fccd8837",
+   "id": "eebfd505",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c120e7",
+   "id": "00513b64",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -852,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "690c0f0c",
+   "id": "d2f7c5ab",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a0e7f6",
+   "id": "b43a7172",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -871,7 +843,7 @@
   }
  ],
  "metadata": {
-  "date": 1694646184.8514023,
+  "date": 1695019732.7275548,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
