--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6a6acf56",
+   "id": "28abd3fc",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41420fda",
+   "id": "22a99e9a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe00cbd6",
+   "id": "d8df8c91",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "303b0317",
+   "id": "d3069ff5",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91ae9860",
+   "id": "7f26413d",
    "metadata": {
     "hide-output": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9deaab",
+   "id": "db9e0a60",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "190e9348",
+   "id": "24fda980",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0ff03e6",
+   "id": "c3def3a2",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c674b2d",
+   "id": "b8111451",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a785fdc0",
+   "id": "b9718ceb",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f2e80ca",
+   "id": "baaf240c",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9c92172",
+   "id": "dec2271e",
    "metadata": {
     "hide-output": false
    },
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db092231",
+   "id": "40eda301",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4baa7947",
+   "id": "6de8889d",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d9611f3",
+   "id": "a865e134",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcabc62a",
+   "id": "3088d72a",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c433507",
+   "id": "1501494e",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7aae27",
+   "id": "716730e2",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f5d52bf",
+   "id": "51337474",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a461d322",
+   "id": "c7878d80",
    "metadata": {
     "hide-output": false
    },
@@ -273,18 +273,17 @@
     "    n = y.shape[0]\n",
     "    g_sum = 0\n",
     "\n",
-    "    # Define the function for each update\n",
-    "    def sum_y_gini(g_sum, i):\n",
+    "    def sum_y_gini(i, g_sum):\n",
     "        g_sum += jnp.sum(jnp.abs(y[i] - y))\n",
-    "        return g_sum, g_sum\n",
-    "\n",
-    "    g_sum, _ = jax.lax.scan(sum_y_gini, 0, jnp.arange(n))\n",
+    "        return g_sum\n",
+    "    \n",
+    "    g_sum = jax.lax.fori_loop(0, n, sum_y_gini, 0)\n",
     "    return g_sum / (2 * n * jnp.sum(y))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d0030a09",
+   "id": "6f6675c1",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -294,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "213950dd",
+   "id": "bb2c52ad",
    "metadata": {
     "hide-output": false
    },
@@ -315,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5cc8946",
+   "id": "c328fcee",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40eaeba2",
+   "id": "82225619",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "216a2f78",
+   "id": "539c7b47",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -365,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05a93d86",
+   "id": "e4653136",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -376,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37dc970c",
+   "id": "1c159d0b",
    "metadata": {
     "hide-output": false
    },
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "076952b6",
+   "id": "19fe8f85",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -400,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0a36939",
+   "id": "c5bd7026",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365c3e01",
+   "id": "60ccc0c6",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -447,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9304269",
+   "id": "ffb8aa77",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f460a7aa",
+   "id": "bf9d3edb",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -486,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b636342",
+   "id": "8dced6c6",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62d96e22",
+   "id": "0a5feaec",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -534,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ae39f4",
+   "id": "82e020e0",
    "metadata": {
     "hide-output": false
    },
@@ -548,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3423d48",
+   "id": "892651ba",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3348c18",
+   "id": "e47f6598",
    "metadata": {
     "hide-output": false
    },
@@ -576,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73db9f8f",
+   "id": "2f8c8d44",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -585,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e033b538",
+   "id": "1a48577b",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6b62311",
+   "id": "2c6d3af7",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -640,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4baf203",
+   "id": "657db1f7",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87ac3207",
+   "id": "6709aa0b",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cd106f8",
+   "id": "41c95cfc",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -676,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d8fb9a",
+   "id": "9a89dae5",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a15bc5b",
+   "id": "1ed7e61b",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a29de9",
+   "id": "386d5e8d",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -713,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8452fd02",
+   "id": "05bf36af",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e7ecec4",
+   "id": "0ff5d592",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -754,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "616ffc21",
+   "id": "c0e4b2cf",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -768,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f243eba",
+   "id": "aa4a80fd",
    "metadata": {
     "hide-output": false
    },
@@ -791,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "598170fe",
+   "id": "04034722",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -802,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12bef3e0",
+   "id": "b1a15823",
    "metadata": {
     "hide-output": false
    },
@@ -827,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc4473f",
+   "id": "104475a2",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -838,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4635f474",
+   "id": "ba144e73",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec43564d",
+   "id": "e83ad4eb",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -866,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de18d6b7",
+   "id": "bf208806",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9c6ef1b",
+   "id": "bb5f3d10",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -899,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e52c014",
+   "id": "2768dec6",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -907,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1fa3041",
+   "id": "3033cdeb",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -932,7 +931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e223be",
+   "id": "5876e6e4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -944,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "006c7453",
+   "id": "f522cd58",
    "metadata": {
     "hide-output": false
    },
@@ -968,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f8e357",
+   "id": "51829397",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -981,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a71cd8",
+   "id": "2f9c12f2",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1007,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aec43015",
+   "id": "3961c483",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8343c808",
+   "id": "980a6bbb",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1031,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59315a0b",
+   "id": "8351a34f",
    "metadata": {
     "hide-output": false
    },
@@ -1048,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99651b9",
+   "id": "d3ce0e55",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1057,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc6503ec",
+   "id": "d13de237",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d0f5887",
+   "id": "c5b2d087",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1082,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22b53797",
+   "id": "a607271a",
    "metadata": {
     "hide-output": false
    },
@@ -1100,7 +1099,7 @@
   }
  ],
  "metadata": {
-  "date": 1694646185.0252964,
+  "date": 1695019732.9081817,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
