--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "24fdba0c",
+   "id": "f5747714",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af4f178",
+   "id": "ef9e4e1d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d636e4a",
+   "id": "def97b35",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ef969c2",
+   "id": "8092440d",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "729295f2",
+   "id": "fdc889ef",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f23d3bd",
+   "id": "a6aab0a6",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9c01f8d",
+   "id": "4c2041be",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71bc56e9",
+   "id": "de67c354",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68a54455",
+   "id": "9d53eaa2",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30791db3",
+   "id": "416f979b",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65601592",
+   "id": "0f15af81",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56de79b9",
+   "id": "69a97489",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68d41170",
+   "id": "04e5649b",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10eeae7f",
+   "id": "2522365c",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43d300bc",
+   "id": "2c11c65e",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0cf86b",
+   "id": "4bf92bd0",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c91b6f",
+   "id": "55df78b4",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0dff669",
+   "id": "f4a68ee3",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a9fe16",
+   "id": "d3553715",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbce2b89",
+   "id": "088f4d3f",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f6c4d46",
+   "id": "f66f3a1a",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fe85493",
+   "id": "1e5d5c88",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c6e245",
+   "id": "236d3796",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17add2c3",
+   "id": "070afcf5",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02825d18",
+   "id": "d3d90b99",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58c87c5",
+   "id": "b86b937b",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b51dc0e",
+   "id": "255c8099",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a1c5ca",
+   "id": "d8ff543a",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00c164dc",
+   "id": "bc514b18",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cf798b9",
+   "id": "ac2228c2",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "633f9460",
+   "id": "7b8927c9",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1db8f25",
+   "id": "427860cb",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d989de1",
+   "id": "3072c9ad",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d134f0",
+   "id": "5f5948b9",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c3c35f1",
+   "id": "2659b109",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db435302",
+   "id": "b19277ec",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ad5da2b",
+   "id": "ec778f76",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0118aed5",
+   "id": "b695ef2c",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -872,7 +872,7 @@
   }
  ],
  "metadata": {
-  "date": 1694646184.408949,
+  "date": 1695019732.2059016,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
