--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "02517dc0",
+   "id": "8e0525ce",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "476b75cc",
+   "id": "1998a124",
    "metadata": {
     "hide-output": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e087057e",
+   "id": "8ad5575c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "494b8092",
+   "id": "95fad75d",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93e7b739",
+   "id": "19e09724",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35cc59c",
+   "id": "45419d02",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41293247",
+   "id": "1d899e0b",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be973851",
+   "id": "5885636a",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53fe79e2",
+   "id": "aa2d9fb2",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6449e30b",
+   "id": "b45786dc",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85e9770",
+   "id": "82ce65eb",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a8c3f6",
+   "id": "be684361",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "873c7a1c",
+   "id": "02df3316",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc72e940",
+   "id": "a381b99e",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a578a3",
+   "id": "147bb02b",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba1ff266",
+   "id": "f023faa3",
    "metadata": {
     "hide-output": false
    },
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5fef66",
+   "id": "4c6e7a2d",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd5903a6",
+   "id": "8c98bbe7",
    "metadata": {
     "hide-output": false
    },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ce45d5",
+   "id": "b6bec9ce",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f03de984",
+   "id": "8416ad0d",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d92267f",
+   "id": "c1a69182",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(4.15)](#equation-eq-ntecxdk).\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa2057d9",
+   "id": "47c82aed",
    "metadata": {
     "hide-output": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c26d9f0",
+   "id": "d442d5e2",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ade33b5",
+   "id": "d9287abe",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15e9043c",
+   "id": "16d95869",
    "metadata": {},
    "source": [
     "These two functions produce the saem output:"
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94e88857",
+   "id": "15b233e3",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fa62157",
+   "id": "12c78911",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed238f3c",
+   "id": "d1b10858",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc72608",
+   "id": "afaad54d",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ffc4401",
+   "id": "371877f9",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44c181c",
+   "id": "b862d1b0",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e3fc006",
+   "id": "b3f92372",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -768,7 +768,7 @@
     "We assume that $ \\{H^c_t\\} $ and $ \\{H^d_t\\} $ are AR(1) processes of the form\n",
     "\n",
     "$$\n",
-    "H^i_{t+1} = \\rho_i H^i_t + \\sigma_i \\eta_{i, t+1}, \n",
+    "H^i_{t+1} = \\rho_i H^i_t + \\sigma_i \\eta_{i, t+1},\n",
     "    \\qquad i \\in \\{c, d\\}\n",
     "$$\n",
     "\n",
@@ -785,15 +785,18 @@
     "\n",
     "<a id='equation-eq-neweqn102'></a>\n",
     "$$\n",
-    "v(X_t) = \\beta {\\mathbb E}_t\n",
-    "    \\left\\{\n",
-    "        \\exp[\n",
-    "            a + (1-\\gamma) Z_t +\n",
-    "                \\bar \\sigma \\exp(H^d_t) \\epsilon_{d, t+1} -\n",
-    "                \\gamma \\bar \\sigma \\exp(H^c_t) \\epsilon_{c, t+1}\n",
-    "            ]\n",
-    "        (1 + v(X_{t+1}))\n",
-    "    \\right\\} \\tag{4.18}\n",
+    "\\begin{aligned}\n",
+    "    v(X_t) = & \\beta \\times \\\\\n",
+    "             & {\\mathbb E}_t\n",
+    "                \\left\\{\n",
+    "                \\exp[\n",
+    "                a + (1-\\gamma) Z_t +\n",
+    "                    \\bar \\sigma \\exp(H^d_t) \\epsilon_{d, t+1} -\n",
+    "                    \\gamma \\bar \\sigma \\exp(H^c_t) \\epsilon_{c, t+1}\n",
+    "                ]\n",
+    "                (1 + v(X_{t+1}))\n",
+    "                \\right\\}\n",
+    "\\end{aligned} \\tag{4.18}\n",
     "$$\n",
     "\n",
     "where, as before, $ a := \\mu_d - \\gamma \\mu_c $\n",
@@ -829,14 +832,16 @@
     "Let\n",
     "\n",
     "$$\n",
-    "A(h_c, h_d, z, h_c', h_d', z') :=\n",
-    "        \\beta \\, \n",
-    "            \\exp \n",
-    "            \\left[\n",
-    "                a + (1-\\gamma) z +\n",
-    "                \\bar \\sigma^2 \\frac{\\exp(2 h_d) + \\gamma^2 \\exp(2 h_c)}{2}\n",
-    "            \\right]\n",
-    "    P(h_c, h_c')Q(h_d, h_d')R(z, z')\n",
+    "\\begin{aligned}\n",
+    "    A(h_c, h_d, z, h_c', h_d', z') := & \\\\\n",
+    "            & \\beta \\,\n",
+    "                \\exp\n",
+    "                \\left[\n",
+    "                    a + (1-\\gamma) z +\n",
+    "                    \\bar \\sigma^2 \\frac{\\exp(2 h_d) + \\gamma^2 \\exp(2 h_c)}{2}\n",
+    "                \\right]\n",
+    "        P(h_c, h_c')Q(h_d, h_d')R(z, z')\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "where $ P, Q, R $ are the stochastic matrices for, respectively, discretized\n",
@@ -849,7 +854,7 @@
     "$$\n",
     "v(h_c, h_d, z) =\n",
     "    \\sum_{h_c', h_d', z'}\n",
-    "        (1 + v(h_c', h_d', z')) \n",
+    "        (1 + v(h_c', h_d', z'))\n",
     "        A(h_c, h_d, z, h_c', h_d', z') \\tag{4.21}\n",
     "$$\n",
     "\n",
@@ -884,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e25a0d6",
+   "id": "17f3745d",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -905,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bcd659b",
+   "id": "5db7abfa",
    "metadata": {
     "hide-output": false
    },
@@ -950,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a784419",
+   "id": "6e3e50c5",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -959,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8dd5e77",
+   "id": "34d8a0b7",
    "metadata": {
     "hide-output": false
    },
@@ -988,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da8bc909",
+   "id": "ca0828e1",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -997,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7c34520",
+   "id": "4f6bd5ee",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "717d4681",
+   "id": "1956379a",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1049,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40e85054",
+   "id": "8c327140",
    "metadata": {
     "hide-output": false
    },
@@ -1062,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0689095a",
+   "id": "60f98a0c",
    "metadata": {
     "hide-output": false
    },
@@ -1075,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0558a1cf",
+   "id": "004aa684",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1084,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c0ce966",
+   "id": "dee34d23",
    "metadata": {
     "hide-output": false
    },
@@ -1101,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9ba5159",
+   "id": "aecfb160",
    "metadata": {
     "hide-output": false
    },
@@ -1118,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f946c10",
+   "id": "5906c356",
    "metadata": {
     "hide-output": false
    },
@@ -1134,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b92d7d7",
+   "id": "92ffdff1",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1147,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "405bcbcc",
+   "id": "cacce87c",
    "metadata": {
     "hide-output": false
    },
@@ -1171,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc957b94",
+   "id": "f8570bbc",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1184,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a022965f",
+   "id": "3c89eea4",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1951887",
+   "id": "0ea95e67",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1222,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe83ccbf",
+   "id": "f2f8c542",
    "metadata": {
     "hide-output": false
    },
@@ -1261,7 +1266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "354cbd95",
+   "id": "6f541629",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1270,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81ce8d64",
+   "id": "38252d38",
    "metadata": {
     "hide-output": false
    },
@@ -1283,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34bce37f",
+   "id": "e56a28bf",
    "metadata": {
     "hide-output": false
    },
@@ -1297,7 +1302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6947d82",
+   "id": "2a9d2b39",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1306,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731f46be",
+   "id": "b1ae3c3e",
    "metadata": {
     "hide-output": false
    },
@@ -1319,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29f5cdec",
+   "id": "adb503ad",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1328,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97a4aa57",
+   "id": "70bb36a0",
    "metadata": {
     "hide-output": false
    },
@@ -1341,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6f59173",
+   "id": "2ce731c6",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1350,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03012d00",
+   "id": "dfadaa5b",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11552370",
+   "id": "26ad0bcb",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1370,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "057d200b",
+   "id": "4f42864e",
    "metadata": {
     "hide-output": false
    },
@@ -1383,7 +1388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2017d623",
+   "id": "c8f46e59",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1400,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e769203",
+   "id": "dccb281f",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1ac938a",
+   "id": "ead688b6",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1437,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e3cf11",
+   "id": "624e04db",
    "metadata": {
     "hide-output": false
    },
@@ -1461,7 +1466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ab36db",
+   "id": "b901cf63",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1470,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a27319e",
+   "id": "d397f0ec",
    "metadata": {
     "hide-output": false
    },
@@ -1482,7 +1487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd2c23e",
+   "id": "b0a7dcd5",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1491,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a4ace79",
+   "id": "5e3db7d5",
    "metadata": {
     "hide-output": false
    },
@@ -1504,7 +1509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd2540a",
+   "id": "ecf23e91",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1513,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3c3d006",
+   "id": "480ba4b6",
    "metadata": {
     "hide-output": false
    },
@@ -1526,7 +1531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8dd0ba5",
+   "id": "3d84e462",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1535,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ed9d081",
+   "id": "9e2c73fe",
    "metadata": {
     "hide-output": false
    },
@@ -1546,7 +1551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05cbc704",
+   "id": "f4676c7e",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1555,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33ae07b3",
+   "id": "2deb6dbb",
    "metadata": {
     "hide-output": false
    },
@@ -1566,7 +1571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "810f9e19",
+   "id": "9d11d18e",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1577,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01232798",
+   "id": "b60cdc02",
    "metadata": {
     "hide-output": false
    },
@@ -1595,7 +1600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dc593bc",
+   "id": "ed666708",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1606,7 +1611,7 @@
   }
  ],
  "metadata": {
-  "date": 1694646184.765256,
+  "date": 1695019732.6358573,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
