--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7171f974",
+   "id": "38bcb862",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23926102",
+   "id": "6cd0d456",
    "metadata": {},
    "source": [
     "# References\n",
@@ -25,7 +25,7 @@
   }
  ],
  "metadata": {
-  "date": 1694646185.0350046,
+  "date": 1695019732.918658,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
